<resources>
    <string name="update_available">Update Available</string>
    <string name="update_check_failed">Failed to Check for Update</string>
    <string name="download">Download</string>
    <string name="new_version_info">New Version: %1$s\n\nChangelogs:\n%2$s</string>
    <string name="already_latest_version">Already a latest version</string>
    <string name="title_usb_hostmode">USB Host Mode</string>
    <string name="desc_download_usb_hostmode">A tool that enables quick toggling between USB host mode and device mode on Windows on ARM (WOA) devices. This utility provides a simple interface to switch USB functionality without navigating through complex system settings.</string>
    <string name="title_optimized_taskbar">Optimized Taskbar Control</string>
    <string name="desc_download_optimized_taskbar">A utility tool that provides quick and easy toggling of the Tablet Optimized Taskbar feature on Windows 11 devices. This tool simplifies switching between standard and tablet-optimized taskbar layouts without navigating through complex system settings.</string>
    <string name="title_boot_autoflasher">Boot IMG Autoflasher</string>
    <string name="desc_download_boot_autoflasher">Use it to easily set up Android boot.img auto-flashing with a simple, user-friendly interface. supports flashing on Windows boot or when battery is below 15%, and requires StA installed to flash Android boot.img.</string>
    <string name="app_name">WIN Cross</string>
    <string name="version_format">Package Name : %1$s\nVersion Number : %2$s</string>
    <string name="tagline">Cross-Platform Windows Control</string>
    <string name="toolbar_title">@string/app_name</string>
    <string name="woa">Windows on ARM Devices</string>
    <string name="content_description_icon">Icon description</string>
    <string name="credits">Credits</string>
    <string name="credits_text">Vern Kuato - KuatoDev-Project ©2025</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="warning">WARNING!</string>
    <string name="select_all">Select all</string>
    <string name="dialog_title_uefi_not_found">UEFI Not Found</string>
    <string name="select_uefi_message">Please select a UEFI file to continue</string>
    <string name="error_showing_dialog">Error showing dialog: %1$s</string>
    <string name="update_dialog_title">Update Available</string>
    <string name="update_dialog_message">A new version of UEFI is available!\nCurrent version: v%1$s\nLatest version: v%2$s\nWould you like to download the update now?</string>
    <string name="update_dialog_positive">Download</string>
    <string name="update_dialog_negative">Later</string>
    <string name="settings_title">Settings</string>
    <string name="toolbox_title">Toolbox</string>
    <string name="toolbox_summary">Open</string>
    <string name="guide">Guide</string>
    <string name="group">Group</string>
    <string name="misc">Misc</string>
    <string name="title_backup">Backup</string>
    <string name="title_mount_windows">Mount Windows</string>
    <string name="title_umount_windows">Unmount Windows</string>
    <string name="title_configurations">Boot Configurations</string>
    <string name="title_information">Information</string>
    <string name="title_help_mount">About Windows Mounting</string>
    <string name="title_open_file_manager">Open in File Manager</string>
    <string name="title_script">Insert Rotation Toggle</string>
    <string name="title_restore">Restore Partition Backup</string>
    <string name="app_configuration">App Configurations</string>
    <string name="contributors_title">Contributors</string>
    <string name="restore_title">Restore Backup Partitions</string>
    <string name="restore_title_header">Select partition to restore:</string>
    <string name="switch_to_windows">Switch to Windows</string>
    <string name="mount_windows">Unmounted</string>
    <string name="umount_windows">Mounted</string>
    <string name="restore_button_text">Restore Backup</string>
    <string name="update_uefi">Automatically Check for UEFI Updates</string>
    <string name="title_create_sta">Create STA</string>
    <string name="desc_create_sta">Create STA (Switch to Android) is a feature that allows you to seamlessly switch from Windows to Android OS with just one click. This feature ensures a smooth transition without requiring complex configurations, making it easy to boot into Android directly from Windows.</string>
    <string name="windows_path_not_configured">Windows path is not configured</string>
    <string name="sta_creation_success">STA created successfully in Windows</string>
    <string name="title_arm_software">ARM Software</string>
    <string name="desc_arm_software">This option adds browser shortcuts to Desktop/ARMSoftware, providing quick access to a curated collection of ARM-compatible software. These tools are specifically designed to enhance performance and functionality when running Windows on ARM-based devices.</string>
    <string name="title_atlas_revi_os">Download Atlas OS / Revi OS Playbook</string>
    <string name="desc_atlas_revi_os">Download and add essential resources for AtlasOS and ReviOS, including playbooks and AME Wizard, to Desktop. These optimized Windows distributions help improve performance and remove unnecessary bloat, making your system faster and more efficient.</string>
    <string name="title_hide_modem">Hide Modem Partition Tools</string>
    <string name="desc_hide_modem">Simple tool that helps you safely hide the modem partition by unassigning its drive letter, preventing apps from accidentally modifying it on your WOA device!</string>
    <string name="title_rotation_toggle">Rotation Toggle</string>
    <string name="desc_rotation_toggle">Utility feature designed to add a convenient rotation lock toggle button to Windows devices with rotation capabilities. This functionality allows users to quickly enable or disable screen rotation without navigating through multiple system settings menus.</string>
    <string name="title_download_frameworks">Download Frameworks</string>
    <string name="desc_download_frameworks">Easily download and install essential frameworks for Windows. These frameworks include necessary dependencies and libraries required for running various applications, improving compatibility, and ensuring smoother software execution.</string>
    <string name="mount_windows_for_toolbox">Toolbox Closed. Mount Windows to use Toolbox</string>
    <string name="contributor_the_sog">•> The Sog</string>
    <string name="contributor_m2k">•> M2K</string>
    <string name="contributor_marius586">•> Marius586</string>
    <string name="contributor_halal_beef">•> Halal-beef</string>
    <string name="contributor_misha">•> Misha_803</string>
    <string name="contributor_bibarub">•> Bibarub</string>
    <string name="contributor_arkt_7">•> ArKT_7</string>
    <string name="key_getprefs">get preferences</string>
    <string name="key_github">Sourcecode</string>
    <string name="title_github">GitHub</string>
    <string name="github_summary">Source code</string>
    <string name="key_telegram">Telegram</string>
    <string name="title_telegram">Telegram Channel</string>
    <string name="telegram_summary">Join my telegram channel for more information updates</string>
    <string name="saved_pref">Saved Preferences</string>
    <string name="saved_pref_summary">Check saved preferences and configs</string>
    <string name="select_uefi">Select UEFI</string>
    <string name="select_uefi_file">Select UEFI File for your device</string>
    <string name="key_select_uefi">UEFI</string>
    <string name="clear_uefi">Clear Saved UEFI</string>
    <string name="key_restore">Restore</string>
    <string name="restore_summary">EXPERIMENTAL! Do With Your Own Risk!</string>
    <string name="restore_backup_summary">MAKE SURE YOUR DEVICE IS CAPABLE OF FLASHING CERTAIN PARTITIONS WHILE BOOTING, OR YOU WILL MESS UP YOUR DEVICE!</string>
    <string name="mount_status">Windows %1$s %2$s</string>
    <string name="action_mount">Mount</string>
    <string name="action_unmount">Unmount</string>
    <string name="status_success">Successful</string>
    <string name="status_failed">Failed!</string>
    <string name="status_not_installed">Not installed</string>
    <string name="status_installed">Installed</string>
    <string name="title_choose_theme_color">Choose Theme Color</string>
    <string name="title_choose_theme">Choose Theme</string>
    <string name="key_theme">Theme</string>
    <string name="key_theme_color">Color Palette</string>
    <string-array name="theme_colors">
        <item>@string/blue</item>
        <item>@string/red</item>
        <item>@string/green</item>
        <item>@string/yellow</item>
        <item>@string/color_default</item>
    </string-array>
    <string name="blue">Blue</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="yellow">Yellow</string>
    <string name="color_default">Default</string>
    <string-array name="theme_modes">
        <item>@string/current_dark_theme</item>
        <item>@string/current_light_theme</item>
        <item>@string/current_follow_system</item>
    </string-array>
    <string name="current_dark_theme">Dark Theme</string>
    <string name="current_light_theme">Light Theme</string>
    <string name="current_follow_system">System Theme</string>
    <string name="flash_logo_with_uefi">Flash Windows logo when switching to Windows</string>
    <string name="mount_to_mnt">Mount Windows to /mnt/Windows instead of using the standard Documents File</string>
    <string name="automatic_mount_windows">Automatically mount Windows when the app starts</string>
    <string name="force_backup_to_win">Force kernel backup on every reboot to Windows</string>
    <string name="backup_boot_if_empty">Back up the kernel if boot.img is missing in Windows</string>
    <string name="always_provision_modem">Always provision modem when switch to Windows</string>
    <string name="boot_to_windows">UEFI is ready to flash</string>
    <string name="uefi_not_found">UEFI not found, Select UEFI to switch to Windows</string>
    <string name="windows_status">Windows is %s</string>
    <string name="backup_not_found">Backup not found.\nBackup Now!</string>
    <string name="last_backup_label">Last Backup:\n%s</string>
    <string name="msg_confirmation">Do you want to %s?</string>
    <string name="msg_backup_kernel">Back up important partitions</string>
    <string name="msg_flash_uefi">Switch to Windows now?</string>
    <string name="msg_mount_windows">Mount the Windows partition</string>
    <string name="msg_umount_windows">Unmount the Windows partition</string>
    <string name="msg_open_file_manager">Open the mounted Windows partition in the File Manager</string>
    <string name="msg_open_backup">Open the backup partition in the File Manager</string>
    <string name="reboot_message">Flashing completed. Would you like to reboot to Windows?</string>
    <string name="reboot_message_warning">Do you want to reboot to Windows now?</string>
    <string name="msg_create_sta">Rreate Switch to Android now</string>
    <string name="msg_arm_software">Insert browser shortcuts for ARM software to Desktop/ARMSoftware</string>
    <string name="msg_rotation_toggle">Download Rotation Toggle to Windows</string>
    <string name="msg_download_frameworks">Download useful frameworks</string>
    <string name="help_message">%s</string>
    <string name="msg_help_backup">This option allows you to back up important partitions, including the kernel, logo, persist, vbmeta, fsc, fsg, dtbo, and modem.</string>
    <string name="msg_help_boot">This option lets you boot into Windows.</string>
    <string name="msg_help_mount">This option mounts the Windows partition and opens it in the File Manager.</string>
</resources>