<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_height="match_parent"
  android:layout_width="match_parent"
  android:background="?attr/colorSurfaceVariant"
  tools:context=".activities.RestoreBackupActivity">

  <include
    layout="@layout/toolbar"
    android:id="@+id/toolbarlayout" />

  <TextView
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:layout_margin="8dp"
    android:textSize="16sp"
    android:textColor="?android:textColorPrimary"
    app:layout_constraintTop_toBottomOf="@id/toolbarlayout"
    android:textStyle="bold"
    android:id="@+id/textInfoHeader"
    android:text="@string/restore_title_header" />

  <androidx.recyclerview.widget.RecyclerView
    android:layout_height="0dp"
    android:layout_width="match_parent"
    android:layout_marginVertical="4dp"
    android:background="@drawable/rounded_background"
    android:padding="24dp"
    android:backgroundTint="?attr/colorSurface"
    tools:listitem="@layout/item_partition"
    android:clipToPadding="false"
    app:layout_constraintBottom_toTopOf="@id/checkboxSelectAll"
    app:layout_constraintTop_toBottomOf="@id/textInfoHeader"
    android:id="@+id/recyclerViewPartitions" />

  <CheckBox
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:text="@string/select_all"
    app:layout_constraintBottom_toTopOf="@id/btnRestore"
    app:layout_constraintTop_toBottomOf="@id/recyclerViewPartitions"
    android:checked="false"
    android:id="@+id/checkboxSelectAll" />

  <com.google.android.material.button.MaterialButton
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    app:backgroundTint="@color/red"
    android:enabled="false"
    app:layout_constraintBottom_toBottomOf="parent"
    android:id="@+id/btnRestore"
    android:text="@string/key_restore" />

</androidx.constraintlayout.widget.ConstraintLayout>